[metadata]
name = aichat
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A lightweight Gemini chat wrapper using HTTP requests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/aichat
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = gemini, ai, chatbot, google, rest, http, wrapper

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests
